--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>MultiSensor_fusion</name>
+  <name>Sensor_fusion</name>
   <version>0.0.0</version>
-  <description>The MultiSensor_fusion package</description>
+  <description>The Sensor_fusion package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
